tests/NormalTests/paczka1/small_fuzzy/73538165.err
Error in line 1: hDe8uM1InKk A165 83,6
Error in line 3: dLYK S66 62,4
